@@ -686,13 +686,16 @@ void DOSBOX_SlowDown( bool pressed ) {
 
 namespace
 {
-std::string getTime()
+std::string getTime(bool date=false)
 {
     const time_t current = time(NULL);
     tm* timeinfo;
     timeinfo = localtime(&current); //convert to local time
-    char buffer[50];
-    ::strftime(buffer, 50, "%H:%M:%S", timeinfo);
+    char buffer[80];
+    if (date)
+        ::strftime(buffer, 80, "%Y-%m-%d %H:%M", timeinfo);
+    else
+        ::strftime(buffer, 50, "%H:%M:%S", timeinfo);
     return buffer;
 }
 
@@ -755,12 +758,12 @@ void SaveGameState(bool pressed) {
 
     try
     {
+        LOG_MSG("Saving state to slot: %d", (int)currentSlot + 1);
         SaveState::instance().save(currentSlot);
-        LOG_MSG("[%s]: State %d saved!", getTime().c_str(), (int)currentSlot + 1);
 		char name[6]="slot0";
 		name[4]='0'+(char)currentSlot;
 		std::string command=SaveState::instance().getName(currentSlot);
-		std::string str="Slot "+(currentSlot>=9?"10":std::string(1, '1'+(char)currentSlot))+(command=="[Empty]"?" [Empty slot]":(command==""?"":" "+command));
+		std::string str="Slot "+(currentSlot>=9?"10":std::string(1, '1'+(char)currentSlot))+(command==""?"":" "+command);
 		mainMenu.get_item(name).set_text(str.c_str()).refresh_item(mainMenu);
     }
     catch (const SaveState::Error& err)
@@ -779,8 +782,8 @@ void LoadGameState(bool pressed) {
 //    }
     try
     {
+        LOG_MSG("Loading state from slot: %d", (int)currentSlot + 1);
         SaveState::instance().load(currentSlot);
-        LOG_MSG("[%s]: State %d loaded!", getTime().c_str(), (int)currentSlot + 1);
     }
     catch (const SaveState::Error& err)
     {
@@ -4730,7 +4733,7 @@ void SaveState::save(size_t slot) { //throw (Error)
 			}
 
 			if(!create_memorysize) {
-                std::string tempname = temp+"Memory_Size";
+				std::string tempname = temp+"Memory_Size";
 				std::ofstream memorysize (tempname.c_str(), std::ofstream::binary);
 				memorysize << MEM_TotalPages();
 				create_memorysize=true;
@@ -4740,15 +4743,8 @@ void SaveState::save(size_t slot) { //throw (Error)
 			if(!create_timestamp) {
 				std::string tempname = temp+"Time_Stamp";
 				std::ofstream timestamp (tempname.c_str(), std::ofstream::binary);
-                time_t rawtime;
-                struct tm * timeinfo;
-                char buffer[80];
-                time (&rawtime);
-                timeinfo = localtime(&rawtime);
-                strftime(buffer,sizeof(buffer),"%Y-%m-%d %H:%M",timeinfo);
-                std::string str(buffer);
-                timestamp << str;
-                create_timestamp=true;
+				timestamp << getTime(true);
+				create_timestamp=true;
 				timestamp.close();
 			}
 
@@ -4808,7 +4804,7 @@ delete_all:
 		MessageBox(GetHWND(),"Failed to save the current state.","Error",MB_OK);
 #endif
 	} else
-		LOG_MSG("Saved. (Slot %d)",(int)slot+1);
+		LOG_MSG("[%s]: Saved. (Slot %d)", getTime().c_str(), (int)slot+1);
 }
 
 void SaveState::load(size_t slot) const { //throw (Error)
@@ -5035,7 +5031,7 @@ delete_all:
 	remove(save2.c_str());
 	save2=temp+"Memory_Size";
 	remove(save2.c_str());
-	if (!load_err) LOG_MSG("Loaded. (Slot %d)",(int)slot+1);
+	if (!load_err) LOG_MSG("[%s]: Loaded. (Slot %d)", getTime().c_str(), (int)slot+1);
 }
 
 bool SaveState::isEmpty(size_t slot) const {
@@ -5067,7 +5063,7 @@ bool SaveState::isEmpty(size_t slot) const {
 }
 
 std::string SaveState::getName(size_t slot) const {
-	if (slot >= SLOT_COUNT) return "[Empty]";
+	if (slot >= SLOT_COUNT) return "[Empty slot]";
 	std::string path;
 	bool Get_Custom_SaveDir(std::string& savedir);
 	if(Get_Custom_SaveDir(path)) {
@@ -5091,7 +5087,7 @@ std::string SaveState::getName(size_t slot) const {
 	std::string save=temp+slotname.str()+".sav";
 	std::ifstream check_slot;
 	check_slot.open(save.c_str(), std::ifstream::in);
-	if (check_slot.fail()) return "[Empty]";
+	if (check_slot.fail()) return "[Empty slot]";
 	my_miniunz((char **)save.c_str(),"Program_Name",temp.c_str());
 	std::ifstream check_title;
 	int length = 8;
